<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.my_profile.MyProfileFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="66dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:id="@+id/refreshLayout2"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/refreshText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/pt_serif"
        android:text="Мой профиль"
        android:textColor="@color/registration"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:orientation="vertical">

                    <TextView
                        android:id="@+id/nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pt_serif"
                        android:text=" "
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textSize="22dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/pt_serif"
                    android:text="@string/myRecipes_my_profile"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/myRecCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/field_for_ingredients"
                    android:fontFamily="@font/pt_serif"
                    android:textColor="@color/registration"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/pt_serif"
                    android:text="@string/saved_my_profile"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/savedCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/field_for_ingredients"
                    android:fontFamily="@font/pt_serif"
                    android:textColor="@color/registration"
                    android:textAlignment="center"
                    android:text="0"
                    android:textSize="18dp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linlayProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/pt_serif"
        android:text="@string/recipes_my_profile"
        android:textColor="@color/registration"
        android:textStyle="bold"
        android:textSize="16.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableLeft="@drawable/border"
        android:drawableTint="#C0C0C0"
        android:layout_marginLeft="2dp"
        android:drawablePadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:text="@string/recipes4_my_profile"
        android:textColor="#C0C0C0"
        android:fontFamily="@font/pt_serif"
        android:textSize="16.5dp"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:singleLine="true"
            android:gravity="right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            android:text="@string/recipes2_my_profile"
            android:textColor="@color/registration"
            android:fontFamily="@font/pt_serif"
            android:textSize="16dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linlayProfile"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:drawableTop="@drawable/plus"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recFav" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:fontFamily="@font/pt_serif"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/recipes3_my_profile"
        android:textColor="@color/registration"
        android:textSize="17dp"
        app:layout_constraintStart_toEndOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/recFav" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
